misc fixes (#74)